recursion.cons.butnlast.ButNlast.scala.error
Erreur de compilation :
ButNlast:5: error: not found: value a
      return tl.head::lambda(tl,t,c+a);
                                    ^ButNlast:5: error: value :: is not a member of Unit
      return tl.head::lambda(tl,t,c+a);
                    ^ButNlast:5: warning: enclosing method lambda has result type Unit: return value discarded
      return tl.head::lambda(tl,t,c+a);
      ^ButNlast:8: error: type mismatch;
 found   : Unit
 required: List[Int]
  return lambda(l, l.size - n, 0)
               ^