recursion.cons.butnlast.ButNlast.scala.code
def butNlast(l:List[Int], n:Int): List[Int] = {
  def lambda(tl:List[Int], t:Int, c:Int){
    if(c < t){
      return tl.head::lambda(tl,t,c+a);
    }
  }
  return lambda(l, l.size - n, 0)
}